<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/black"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="0"
                android:layout_weight="1"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="0"
                android:layout_weight="1"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@color/pink"
                android:gravity="center">
                <Button
                    android:id="@+id/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btn9"
                    android:layout_margin="3dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btn8"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btn7"
                    android:layout_weight="1"
                    android:layout_margin="3dp"/>
                <Button
                    android:id="@+id/btnDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btnDiv"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="1dp">
                <Button
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btn6"
                    android:layout_weight="1"
                    android:layout_margin="3dp"/>
                <Button
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btn5"
                    android:layout_weight="1"
                    android:layout_margin="3dp"/>
                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btn4"
                    android:layout_weight="1"
                    android:layout_margin="3dp"/>
                <Button
                    android:id="@+id/btnMult"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btnMult"
                    android:layout_weight="1"
                    android:layout_margin="3dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@color/lemon"
                android:layout_margin="1dp">
                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btn3"
                    android:layout_weight="1"
                    android:layout_margin="3dp"/>
                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btn2"
                    android:layout_weight="1"
                    android:layout_margin="3dp"/>
                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btn1"
                    android:layout_weight="1"
                    android:layout_margin="3dp"/>
                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/btnAdd"
                    android:layout_weight="1"
                    android:layout_margin="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@color/purple"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/btnClear" />

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/btn0" />

                <Button
                    android:id="@+id/btnEquals"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/btnEquals" />

                <Button
                    android:id="@+id/btnSub"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/btnSub" />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
